[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Fonts/ZFTerminal/ZFTERMIN__.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Characters/Players/GUI/CollectedWIS.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 7
font_data = ExtResource( 1 )

[node name="CollectedWIS" type="ColorRect"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
color = Color( 0.933333, 0.933333, 0.933333, 1 )
script = ExtResource( 2 )

[node name="ItemIcon" type="TextureRect" parent="."]
margin_right = 48.0
margin_bottom = 48.0
expand = true

[node name="Details" type="ColorRect" parent="."]
margin_left = 48.0
margin_right = 192.0
margin_bottom = 48.0
mouse_filter = 1
color = Color( 0, 0, 0, 1 )

[node name="lbl_name" type="Label" parent="Details"]
margin_left = 8.0
margin_top = 8.0
margin_right = 56.0
margin_bottom = 24.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "Name"
autowrap = true

[node name="lbl_description" type="Label" parent="Details"]
margin_left = 8.0
margin_top = 32.0
margin_right = 144.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "descrition"
autowrap = true

[node name="lbl_level" type="Label" parent="Details"]
margin_left = 112.0
margin_top = 8.0
margin_right = 136.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "Lv"

[node name="lbl_type" type="Label" parent="Details"]
margin_left = 112.0
margin_top = 24.0
margin_right = 136.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 1 )
text = "type"
